# DeepGMM

./: .gitignore  CLAUDE.md  INITIAL_IMPLEMENTATION_PLAN.md  RESEARCH_DIARY.md  main.py  plot_per_a_boxplots.py  plotting.py  pyproject.toml  run_pci_compare.py  run_pci_compare_toy.py  run_zoo_experiments_baselines.py  slurm_job.sh  walk_through.md
.claude/: settings.local.json
baselines/: all_baselines.py
baselines/agmm/: deep_gmm.py  gmm_game_graph.py  utils.py
configs/: experiment_params.toml  load_config.py
data/: __init__.py  data_class_mar.py
data/zoo/: abs.npz  linear.npz  sin.npz  step.npz
game_objectives/: pci_moment_objective.py
learning/: learning_pci.py
methods/: __init__.py  original_deepgmm_baseline.py  pci_deepgmm_method.py  toy_model_modified_deepgmm_method.py
optimizers/: __init__.py
scenarios/: demand_scenario.py
tests/: test_demand_dgp.py  test_imputation.py  test_pci_method.py  test_pci_objective.py
