[project]
name = "deepgmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Modern, minimal dependencies required for DeepGMM
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "tensorflow>=2.20.0",
    "scikit-learn>=1.6.1",
    "torch>=2.1.0",
    "pandas>=2.2.0",   # learning/learning_dev_f.py (DataFrame for grad-history logging)
    "joblib>=1.3.0",   # run_pci_compare.py Parallel/delayed
]
